make world builds all of external and internal.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3362 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -82,6 +82,9 @@ $(SYSTEMS):
 
 all: env sources-$(VERSION)-expanded $(SYSTEMS)
 
+world: all binaries install
+	make -C ../internal DEBUG=$(DEBUG) all binaries install
+
 clean: env
 	@for system in $(SYSTEMS); \
 	do \
