Bug 1791, make build work on ppc linux, patch from Kapil Thangavelu (hazmat@objectrealms.net).
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3365 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/db/Makefile
+++ b/external/persistence/db/Makefile
@@ -52,7 +52,9 @@ BUILD=build_$(SNAP)
 $(SRC)/$(BUILD)/Makefile:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../dist/configure --prefix=$(PREFIX)/db \
-                          --enable-cxx $(CONF_DBG)
+                          --enable-cxx \
+                          --with-pic \
+                          $(CONF_DBG)
 
 build: apply $(SRC)/$(BUILD)/Makefile
 	cd $(SRC)/$(BUILD); $(MAKE); $(MAKE) install
