Bug 1480, skip copying files into build_* directory if we have already done it.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3367 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/openssl/Makefile
+++ b/external/openssl/Makefile
@@ -19,13 +19,13 @@ OUT32DLL=out32dll
 DOMASM=do_masm.bat
 endif
 
-$(SRC)/$(BUILD)/ms/$(DOMASM): apply
+$(SRC)/$(BUILD)/ms/$(DOMASM):
 	cd $(SRC); mkdir $(BUILD); cp Makefile.org *.h $(BUILD)/; \
 	cp -r crypto ssl apps certs tools util ms include test $(BUILD)/;cd $(BUILD);\
 	$(MK1MF);\
 	chmod a+x ms/$(DOMASM);
 
-openssl: $(SRC)/$(BUILD)/ms/$(DOMASM)
+openssl: apply $(SRC)/$(BUILD)/ms/$(DOMASM)
 	cd $(SRC)/$(BUILD); \
 	MAKEFLAGS=; \
 	perl ../Configure --openssldir=$(PREFIX) --install_prefix=$(PREFIX) $(CONF_OPT) VC-WIN32; \
@@ -33,13 +33,11 @@ openssl: $(SRC)/$(BUILD)/ms/$(DOMASM)
 	nmake -f ms/ntdll.mak;\
 	cd $(OUT32DLL); \
 	../ms/test.bat; \
-	echo 'Installing...';\
 	cp -f ssleay32.dll $(PREFIX)/bin/; \
 	cp -f libeay32.dll $(PREFIX)/bin/; \
 	cp -f ssleay32.lib $(PREFIX)/lib/; \
 	cp -f libeay32.lib $(PREFIX)/lib/; \
-	cp -fr ../inc32/openssl $(PREFIX)/Include;\
-	echo 'Installation done.'
+	cp -fr  ../inc32/openssl $(PREFIX)/Include
 
 # snap target can be empty on Windows because we will install the OpenSSL
 # DLLs during M2Crypto build, as we'll be copying the DLLs into site-packages
@@ -50,11 +48,11 @@ snap:
 
 else
 
-$(SRC)/$(BUILD): apply
+$(SRC)/$(BUILD):
 	cd $(SRC); mkdir $(BUILD);\
 	cp -r Configure Makefile.org *.h crypto ssl apps certs tools util doc include $(BUILD)/
 
-openssl: $(SRC)/$(BUILD)
+openssl: apply $(SRC)/$(BUILD)
 	cd $(SRC)/$(BUILD);\
 	../config shared --openssldir=$(PREFIX) $(CONF_OPT);\
 	$(MAKE);\
@@ -94,7 +92,7 @@ endif # if Cygwin or not
 expand: openssl-$(VERSION).tar.gz
 	tar xvzf openssl-$(VERSION).tar.gz
 
-apply:  
+apply:
 	patch -Nup0 < patches-$(VERSION); echo ok
 
 clean:
