Add MD5CHECK variable which you can override in your environment if your md5sum does not accept the standard --check argument.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3418 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -63,6 +63,8 @@ MD5=md5sum
 endif
 endif
 
+MD5CHECK=$(MD5) --check
+
 ifeq ($(CHANDLERHOME),)
 CHANDLERHOME=.
 endif
@@ -93,7 +95,7 @@ downloads: $(ARCHIVES)
 $(ARCHIVES):
 	$(CURL) $@ $(URL)/$(notdir $@)
 	$(CURL) $(@:=.md5) $(URL)/$(notdir $(@:=.md5))
-	(cd ..; $(MD5) --check $(notdir $(@:=.md5)))
+	(cd ..; $(MD5CHECK) $(notdir $(@:=.md5)))
 
 $(BIN_ARCHIVES_INST):
 	tar -C $(CHANDLERBIN) -xvzf ../$(notdir $(basename $@))
