fixed bogus md5 invocation for new gcj
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3475 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -166,7 +166,7 @@ $(BUILD_ROOT)/mingw-$(MINGW_VERSION).tar.gz:
 	cd $(BUILD_ROOT); \
 	$(CURL) -O $(COMPILERS)/windows/mingw-$(MINGW_VERSION).tar.gz
 	$(CURL) -O $(COMPILERS)/windows/mingw-$(MINGW_VERSION).tar.gz.md5
-	$(MD5CHECK) mingw-3.1.$(MINGW_VERSION).md5
+	$(MD5CHECK) mingw-3.1.$(MINGW_VERSION).tar.gz.md5
 
 endif
 
