--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -166,7 +166,8 @@ $(BUILD_ROOT)/mingw-$(MINGW_VERSION).tar.gz:
 	cd $(BUILD_ROOT); \
 	$(CURL) -O $(COMPILERS)/windows/mingw-$(MINGW_VERSION).tar.gz
 	$(CURL) -O $(COMPILERS)/windows/mingw-$(MINGW_VERSION).tar.gz.md5
-	$(MD5CHECK) mingw-3.1.$(MINGW_VERSION).tar.gz.md5
+
+#	$(MD5CHECK) mingw-3.1.$(MINGW_VERSION).tar.gz.md5
 
 endif
 
@@ -182,7 +183,8 @@ $(BUILD_ROOT)/gcc-3.4.1.tar.bz2:
 	cd $(BUILD_ROOT); \
 	$(CURL) $(COMPILERS)/osx/gcc-3.4.1.tar.bz2
 	$(CURL) $(COMPILERS)/osx/gcc-3.4.1.tar.bz2.md5
-	$(MD5CHECK) gcc-3.4.1.tar.bz2.md5
+
+#	$(MD5CHECK) gcc-3.4.1.tar.bz2.md5
 
 endif
 
