upgrade PyLucene to version 0.6.1 and sources to 0.3-16
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3548 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/PyLucene/Makefile
+++ b/external/PyLucene/Makefile
@@ -1,5 +1,5 @@
 
-VERSION=0.5.1
+VERSION=0.6.1
 PYLUCENE=$(BUILD_ROOT)/PyLucene
 SRC=$(PYLUCENE)/PyLucene-$(VERSION)
 
@@ -53,10 +53,8 @@ endif
 endif
 
 
-apply: 
-	if [ -f patches-$(VERSION) ]; then \
-	   patch -Nup0 < patches-$(VERSION); echo ok; \
-	fi
+apply: patches-$(VERSION)
+	patch -Nup0 < patches-$(VERSION); echo ok
 
 
 ifeq ($(PYLUCENE_CC),)
