--- a/external/python/win32/zlib.vcproj
+++ b/external/python/win32/zlib.vcproj
@@ -37,7 +37,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="..\..\zlib-1.2.1\zlib.lib"
+				AdditionalDependencies="..\..\zlib-1.2.1\zlib_d.lib"
 				OutputFile="./zlib_d.pyd"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
