Strange version/relver/src.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3567 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -1,9 +1,8 @@
 
 include ../Makefile.inc
 
-VERSION=2.5.2.9
-RELVER=$(VERSION)-1
-SRC=$(INTERNAL)/wxPython-$(VERSION)
+RELVER=2.5.2.9-1
+SRC=$(INTERNAL)/wxPython-2.5
 
 ifeq ($(DEBUG),1)
 CONF_OPT=--enable-debug
