added missing MD5 invocation
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3759 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -47,6 +47,7 @@ SOURCES=persistence/db/db-4.2.52.tar.gz \
 
 sources:
 	tar -cvf sources-$(VERSION).tar $(SOURCES)
+	$(MD5) sources-$(VERSION).tar > sources-$(VERSION).tar.md5
 
 sources-$(VERSION).tar:
 	$(CURL) http://builds.o11n.org/external/sources-$(VERSION).tar
