md5's computed on binary .gz's
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3762 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -52,7 +52,6 @@ sources:
 sources-$(VERSION).tar:
 	$(CURL) http://builds.o11n.org/external/sources-$(VERSION).tar
 	$(CURL) http://builds.o11n.org/external/sources-$(VERSION).tar.md5
-
 #	$(MD5CHECK) sources-$(VERSION).tar.md5
 
 sources-$(VERSION)-expanded: sources-$(VERSION).tar
@@ -79,8 +78,8 @@ binaries:
             tar -Af $(SNAP)-$(VERSION).tar _tmp.tar; \
             rm _tmp.tar; \
 	done
-	$(MD5) $(SNAP)-$(VERSION).tar > $(SNAP)-$(VERSION).tar.md5
 	gzip $(SNAP)-$(VERSION).tar
+	$(MD5) $(SNAP)-$(VERSION).tar.gz > $(SNAP)-$(VERSION).tar.gz.md5
 
 $(SYSTEMS):
 	$(MAKE) -C $@ DEBUG=$(DEBUG)
@@ -108,7 +107,7 @@ realclean:
 
 upload:	$(SNAP)-$(VERSION).tar.gz
 	scp $(SNAP)-$(VERSION).tar.gz $(UPLOAD)
-	scp $(SNAP)-$(VERSION).tar.md5 $(UPLOAD)
+	scp $(SNAP)-$(VERSION).tar.gz.md5 $(UPLOAD)
 
 install: $(SNAP)-$(VERSION).tar.gz
 	tar -C $(CHANDLERBIN) -xvzf $(SNAP)-$(VERSION).tar.gz
