- implemented swiggery for python rijndael module    - added encryption support to Lob API    - implemented RijndaelInput|OutputStream, added StringInput|OutputStream    - debugged RijndaelInput|OutputStream    - removed dead merge code    - RefDict.__contains__() now accepts None    - added Lob encryption unit test to TestText.py    - added class check to Kind code, Item must be at the top of the diamond    - made DynamicBlock and RefCollectionDictionary subclasses of Item    - added epydoc for new Repository.open() keywords    - set displayName's display name to 'Title', fixed bug 1745    - added support for updating existing items in native xml from packs    - added chandler.pack for chandler-specific core schema customizations    - added support for exclusive repository open mode    - added lock module using fcntl on posix and extension on windows    - implemented open lock stuff using OS file system locks    - consolidated UUIDext, lock and rijndael extensions into chandlerdb    - moved UUID.py to chandlerdb.util    - fixed bug in setting a refDict value on another attribute    - fixed change tracking bug in LinkedMap when removing first or last element    - fixed bug in alias saving, reused aliases would be lost    - changed placeItem() to accept zero or more indexNames as arguments    - added insertItem(), replaceItem() on RefDict    - added insertByIndex(), removeByIndex(), replaceByIndex() on RefDict    - enhanced Item.refCount to return more information    - fixed bug in Values.clear(), flags should be set, not cleared    - fixed unloaded ref reloading bug    - changed prune to skip items with more than 3 non data model references    - added refcounted repository mode where pinning is not necessary    - fixed bug with reloading pinned instances recursively    - fixed merging bug introduced by fix for unloaded ref reloading bug    - dematerialized bi-directional references    - renamed remainder of ItemRef.py to RefCollections.py    - renamed RefCollections

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -5,17 +5,16 @@
 #
 
 # these get installed into release or debug
-BIN_ARCHIVES=../$(SNAP)-0.3-18.tar.gz \
+BIN_ARCHIVES=../$(SNAP)-0.4-1.tar.gz \
              ../wxPython-$(SNAP)-2.5.2.9-2.tar.gz \
-             ../UUIDext-$(SNAP)-0.3-3.tar.gz \
+             ../chandlerdb-$(SNAP)-0.4-1.tar.gz \
              ../m2crypto-$(SNAP)-0.12-2.tar.gz \
-             ../Launchers-$(SNAP)-0.3-8.tar.gz
+             ../Launchers-$(SNAP)-0.4-1.tar.gz
 
 # these get installed into chandler
-HOME_ARCHIVES=../QueryParser-$(SNAP)-0.1-4.tar.gz
+HOME_ARCHIVES=../QueryParser-$(SNAP)-0.4-1.tar.gz
 
 ARCHIVES = $(BIN_ARCHIVES) $(HOME_ARCHIVES)
-
 ARCHIVES_MD5 = $(addsuffix .md5,$(ARCHIVES))
 
 
@@ -95,9 +94,9 @@ downloads: $(ARCHIVES)
 
 $(ARCHIVES):
 	$(CURL) $@ $(URL)/$(notdir $@)
-	$(CURL) $(@:=.md5) $(URL)/$(notdir $(@:=.md5))
+	$(CURL) $@.md5 $(URL)/$(notdir $@.md5)
 
-#	(cd ..; $(MD5CHECK) $(notdir $(@:=.md5)))
+#	cd ..; $(MD5CHECK) $(notdir $@.md5)
 
 $(BIN_ARCHIVES_INST):
 	tar -C $(CHANDLERBIN) -xvzf ../$(notdir $(basename $@))
