Makefile change should have triggered make install.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3771 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -1,4 +1,7 @@
 
+# Copyright (c) 2004 Open Source Applications Foundation
+# License: http://osafoundation.org/Chandler_0.1_license_terms.htm
+#
 # This Makefile requires cygwin on Windows
 # It should *not* be made to depend on external/internal
 # When a version changes, the ARCHIVES lists below needs to be updated.
