- excluded some unneeded static libraries from distribution
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3795 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/db/Makefile
+++ b/external/persistence/db/Makefile
@@ -64,7 +64,8 @@ clean:
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(DB)/$(SNAP).tar.gz $(SNAP)/db/bin $(SNAP)/db/lib
+        tar -cvzf $(DB)/$(SNAP).tar.gz $(SNAP)/db/bin $(SNAP)/db/lib \
+            --exclude '*.a'
 
 endif
 
